// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Resize images > max contrast 8x8 > to BEZIER 2x5 1`] = `
  
 ■
??
?■
  
`;

exports[`Resize images > max contrast 8x8 > to BEZIER 4x4 1`] = `
   ■
   ■
???■
■■■■
`;

exports[`Resize images > max contrast 8x8 > to BICUBIC 2x5 1`] = `
  
 ■
??
?■
  
`;

exports[`Resize images > max contrast 8x8 > to BICUBIC 4x4 1`] = `
   ■
   ■
???■
■■■■
`;

exports[`Resize images > max contrast 8x8 > to BILINEAR 2x5 1`] = `
  
 ■
■■
■■
  
`;

exports[`Resize images > max contrast 8x8 > to BILINEAR 4x4 1`] = `
   ■
   ■
■■■■
■■■■
`;

exports[`Resize images > max contrast 8x8 > to HERMITE 2x5 1`] = `
  
 ■
??
?■
  
`;

exports[`Resize images > max contrast 8x8 > to HERMITE 4x4 1`] = `
   ■
   ■
???■
■■■■
`;

exports[`Resize images > max contrast 8x8 > to NEAREST_NEIGHBOR 2x5 1`] = `
  
 ■
■■
■■
  
`;

exports[`Resize images > max contrast 8x8 > to NEAREST_NEIGHBOR 4x4 1`] = `
   ■
   ■
■■■■
■■■■
`;

exports[`Resize images > max contrast 8x8 > to default 2x5 1`] = `
  
 ■
■■
■■
  
`;

exports[`Resize images > max contrast 8x8 > to default 4x4 1`] = `
   ■
   ■
■■■■
■■■■
`;

exports[`Resize images > max contrast 12x12 with dots > to BEZIER 6x6 1`] = `
   ■  
 ■   ■
???■■■
■■■■■■
   ■??
?■???■
`;

exports[`Resize images > max contrast 12x12 with dots > to BICUBIC 6x6 1`] = `
   ■  
 ■   ■
???■■■
■■■■■■
   ■??
?■???■
`;

exports[`Resize images > max contrast 12x12 with dots > to BILINEAR 6x6 1`] = `
   ■  
 ■   ■
■■■■■■
■■■■■■
   ■  
 ■   ■
`;

exports[`Resize images > max contrast 12x12 with dots > to HERMITE 6x6 1`] = `
   ■  
 ■   ■
???■■■
■■■■■■
   ■??
?■???■
`;

exports[`Resize images > max contrast 12x12 with dots > to NEAREST_NEIGHBOR 6x6 1`] = `
   ■  
 ■   ■
■■■■■■
■■■■■■
   ■  
 ■   ■
`;

exports[`Resize images > max contrast 12x12 with dots > to default 6x6 1`] = `
   ■  
 ■   ■
■■■■■■
■■■■■■
   ■??
?■   ■
`;

exports[`Resize images > mutch contrast 4x4 > to BEZIER 6x6 1`] = `
???■??
?■???■
???■??
?■???■
???■??
?■???■
`;

exports[`Resize images > mutch contrast 4x4 > to BICUBIC 6x6 1`] = `
???■??
?■???■
???■??
?■???■
???■??
?■???■
`;

exports[`Resize images > mutch contrast 4x4 > to BILINEAR 6x6 1`] = `
???■??
?■???■
???■??
?■???■
???■??
?■???■
`;

exports[`Resize images > mutch contrast 4x4 > to HERMITE 6x6 1`] = `
???■??
?■???■
???■??
?■???■
???■??
?■???■
`;

exports[`Resize images > mutch contrast 4x4 > to NEAREST_NEIGHBOR 6x6 1`] = `
???■??
?■???■
???■??
?■???■
???■??
?■???■
`;

exports[`Resize images > mutch contrast 4x4 > to default 6x6 1`] = `
???■??
?■???■
???■??
?■???■
???■??
?■???■
`;
